Adjust z-index of several elements to fix the issues with tooltips not appearing

--- a/styles.css
+++ b/styles.css
@@ -226,6 +226,7 @@ input[type="checkbox"]:checked+label {
     position: absolute;
     top: 0;
     left: 0;
+    z-index: 10000;
 }
 
 #transparent_background{
